--- a/test-output/index.html
+++ b/test-output/index.html
@@ -23,7 +23,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -37,7 +37,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Default_suite" class="navigator-link">
-              <span class="suite-name border-failed">Default suite</span>
+              <span class="suite-name border-passed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -90,21 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">7 methods, 1 failed,   6 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods failed suite-Default_suite"> (hide)</a> <!-- hide-methods failed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods failed suite-Default_suite"> (show)</a> <!-- show-methods failed suite-Default_suite -->
-                    </span>
-                    <div class="method-list-content failed suite-Default_suite">
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="UserAPIGetTest" class="method navigator-link" hash-for-method="testWithCreateUser">testWithCreateUser</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-Default_suite -->
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -115,32 +101,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="UserAPIGetTest" class="method navigator-link" hash-for-method="testWithBlankId">testWithBlankId</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="UserApachePOITests" class="method navigator-link" hash-for-method="testWithCorrectUserId(5775209, Gajabahu Varma)">testWithCorrectUserId(5775209, Gajabahu Varma)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="UserAPIGetTest" class="method navigator-link" hash-for-method="testWithCorrectUserId(5711476, Sucheta Pandey MD)">testWithCorrectUserId(5711476, Sucheta Pandey MD)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="UserApachePOITests" class="method navigator-link" hash-for-method="testWithCorrectUserId(5775210, Gorakhanatha Nehru)">testWithCorrectUserId(5775210, Gorakhanatha Nehru)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="UserAPIGetTest" class="method navigator-link" hash-for-method="testWithCorrectUserId(5711475, Trisha Jain)">testWithCorrectUserId(5711475, Trisha Jain)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="UserApachePOITests" class="method navigator-link" hash-for-method="testWithNonExistingtUserId(456, ba)">testWithNonExistingtUserId(456, ba)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="UserAPIGetTest" class="method navigator-link" hash-for-method="testWithNonExistingtUserId(456, bb)">testWithNonExistingtUserId(456, bb)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="UserAPIGetTest" class="method navigator-link" hash-for-method="testWithNonExistingtUserId(123, aa)">testWithNonExistingtUserId(123, aa)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="UserAPIGetTest" class="method navigator-link" hash-for-method="testWithSpecialChar">testWithSpecialChar</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="UserApachePOITests" class="method navigator-link" hash-for-method="testWithNonExistingtUserId(123, aa)">testWithNonExistingtUserId(123, aa)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -155,88 +131,34 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-failed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">UserAPIGetTest</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="testWithCreateUser">
-                  </a> <!-- testWithCreateUser -->
-                  <span class="method-name">testWithCreateUser</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [201] but found [422]
-	at org.testng.Assert.fail(Assert.java:94)
-	at org.testng.Assert.failNotEquals(Assert.java:496)
-	at org.testng.Assert.assertEquals(Assert.java:125)
-	at org.testng.Assert.assertEquals(Assert.java:372)
-	at org.testng.Assert.assertEquals(Assert.java:382)
-	at core.QaHttpValidator.performBasicHttpValidation(QaHttpValidator.java:9)
-	at UserAPIGetTest.testWithCreateUser(UserAPIGetTest.java:119)
-	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:578)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:85)
-	at org.testng.internal.Invoker.invokeMethod(Invoker.java:659)
-	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:845)
-	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1153)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:125)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:108)
-	at org.testng.TestRunner.privateRun(TestRunner.java:771)
-	at org.testng.TestRunner.run(TestRunner.java:621)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:357)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:352)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:310)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:259)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:86)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1199)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1124)
-	at org.testng.TestNG.run(TestNG.java:1032)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-failed -->
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">UserAPIGetTest</span>
+              <span class="class-name">UserApachePOITests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testWithBlankId">
-                  </a> <!-- testWithBlankId -->
-                  <span class="method-name">testWithBlankId</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testWithCorrectUserId(5711476, Sucheta Pandey MD)">
-                  </a> <!-- testWithCorrectUserId(5711476, Sucheta Pandey MD) -->
+                  <a name="testWithCorrectUserId(5775209, Gajabahu Varma)">
+                  </a> <!-- testWithCorrectUserId(5775209, Gajabahu Varma) -->
                   <span class="method-name">testWithCorrectUserId</span>
-                  <span class="parameters">(5711476, Sucheta Pandey MD)</span>
+                  <span class="parameters">(5775209, Gajabahu Varma)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testWithCorrectUserId(5711475, Trisha Jain)">
-                  </a> <!-- testWithCorrectUserId(5711475, Trisha Jain) -->
+                  <a name="testWithCorrectUserId(5775210, Gorakhanatha Nehru)">
+                  </a> <!-- testWithCorrectUserId(5775210, Gorakhanatha Nehru) -->
                   <span class="method-name">testWithCorrectUserId</span>
-                  <span class="parameters">(5711475, Trisha Jain)</span>
+                  <span class="parameters">(5775210, Gorakhanatha Nehru)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testWithNonExistingtUserId(456, bb)">
-                  </a> <!-- testWithNonExistingtUserId(456, bb) -->
+                  <a name="testWithNonExistingtUserId(456, ba)">
+                  </a> <!-- testWithNonExistingtUserId(456, ba) -->
                   <span class="method-name">testWithNonExistingtUserId</span>
-                  <span class="parameters">(456, bb)</span>
+                  <span class="parameters">(456, ba)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -247,19 +169,12 @@
                   <span class="parameters">(123, aa)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testWithSpecialChar">
-                  </a> <!-- testWithSpecialChar -->
-                  <span class="method-name">testWithSpecialChar</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/wn/qqzs8nzn7qd73fbjm2plhlv80000gn/T/testng-eclipse-30048899/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/wn/qqzs8nzn7qd73fbjm2plhlv80000gn/T/testng-eclipse-1471340981/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -268,7 +183,7 @@
 &lt;suite parallel=&quot;none&quot; name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;UserAPIGetTest&quot;/&gt;
+      &lt;class name=&quot;UserApachePOITests&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -308,40 +223,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(7);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testWithBlankId')
-data.setCell(0, 2, 'UserAPIGetTest')
-data.setCell(0, 3, 1541);
+data.setCell(0, 1, 'testWithCorrectUserId')
+data.setCell(0, 2, 'UserApachePOITests')
+data.setCell(0, 3, 1215);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testWithNonExistingtUserId')
-data.setCell(1, 2, 'UserAPIGetTest')
-data.setCell(1, 3, 1061);
+data.setCell(1, 1, 'testWithCorrectUserId')
+data.setCell(1, 2, 'UserApachePOITests')
+data.setCell(1, 3, 904);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'testWithNonExistingtUserId')
-data.setCell(2, 2, 'UserAPIGetTest')
-data.setCell(2, 3, 895);
+data.setCell(2, 2, 'UserApachePOITests')
+data.setCell(2, 3, 886);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'testWithCreateUser')
-data.setCell(3, 2, 'UserAPIGetTest')
-data.setCell(3, 3, 875);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'testWithSpecialChar')
-data.setCell(4, 2, 'UserAPIGetTest')
-data.setCell(4, 3, 843);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'testWithCorrectUserId')
-data.setCell(5, 2, 'UserAPIGetTest')
-data.setCell(5, 3, 823);
-data.setCell(6, 0, 6)
-data.setCell(6, 1, 'testWithCorrectUserId')
-data.setCell(6, 2, 'UserAPIGetTest')
-data.setCell(6, 3, 492);
+data.setCell(3, 1, 'testWithNonExistingtUserId')
+data.setCell(3, 2, 'UserApachePOITests')
+data.setCell(3, 3, 859);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -367,36 +270,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">UserAPIGetTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">UserApachePOITests</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">testWithBlankId</span>
+                <span class="method-name">testWithCorrectUserId(5775209, Gajabahu Varma)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testWithCorrectUserId(5711476, Sucheta Pandey MD)</span>
-                <span class="method-start">1856 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testWithCorrectUserId(5711475, Trisha Jain)</span>
-                <span class="method-start">2353 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">testWithCreateUser</span>
-                <span class="method-start">3181 ms</span>
+                <span class="method-name">testWithCorrectUserId(5775210, Gorakhanatha Nehru)</span>
+                <span class="method-start">1221 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testWithNonExistingtUserId(123, aa)</span>
-                <span class="method-start">4153 ms</span>
+                <span class="method-start">2267 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testWithNonExistingtUserId(456, bb)</span>
-                <span class="method-start">5220 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testWithSpecialChar</span>
-                <span class="method-start">6120 ms</span>
+                <span class="method-name">testWithNonExistingtUserId(456, ba)</span>
+                <span class="method-start">3171 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
