--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d2ade3">  <td>23/11/22 21:58:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserAPIGetTest.testWithBlankId()[pri:0, instance:UserAPIGetTest@3697186]">testWithBlankId</td> 
+<tr bgcolor="76d6af">  <td>23/11/25 18:22:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserApachePOITests.testWithCorrectUserId(java.lang.String, java.lang.String)[pri:0, instance:UserApachePOITests@c7ba306]">testWithCorrectUserId</td> 
   <td>main@758529971</td>   <td></td> </tr>
-<tr bgcolor="d2ade3">  <td>23/11/22 21:58:27</td>   <td>1857</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserAPIGetTest.testWithCorrectUserId(java.lang.String, java.lang.String)[pri:0, instance:UserAPIGetTest@3697186]">testWithCorrectUserId</td> 
+<tr bgcolor="76d6af">  <td>23/11/25 18:22:07</td>   <td>1220</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserApachePOITests.testWithCorrectUserId(java.lang.String, java.lang.String)[pri:0, instance:UserApachePOITests@c7ba306]">testWithCorrectUserId</td> 
   <td>main@758529971</td>   <td></td> </tr>
-<tr bgcolor="d2ade3">  <td>23/11/22 21:58:28</td>   <td>2352</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserAPIGetTest.testWithCorrectUserId(java.lang.String, java.lang.String)[pri:0, instance:UserAPIGetTest@3697186]">testWithCorrectUserId</td> 
+<tr bgcolor="76d6af">  <td>23/11/25 18:22:08</td>   <td>2266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserApachePOITests.testWithNonExistingtUserId(java.lang.String, java.lang.String)[pri:0, instance:UserApachePOITests@c7ba306]">testWithNonExistingtUserId</td> 
   <td>main@758529971</td>   <td></td> </tr>
-<tr bgcolor="d2ade3">  <td>23/11/22 21:58:28</td>   <td>3181</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserAPIGetTest.testWithCreateUser()[pri:0, instance:UserAPIGetTest@3697186]">testWithCreateUser</td> 
-  <td>main@758529971</td>   <td></td> </tr>
-<tr bgcolor="d2ade3">  <td>23/11/22 21:58:29</td>   <td>4155</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserAPIGetTest.testWithNonExistingtUserId(java.lang.String, java.lang.String)[pri:0, instance:UserAPIGetTest@3697186]">testWithNonExistingtUserId</td> 
-  <td>main@758529971</td>   <td></td> </tr>
-<tr bgcolor="d2ade3">  <td>23/11/22 21:58:30</td>   <td>5219</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserAPIGetTest.testWithNonExistingtUserId(java.lang.String, java.lang.String)[pri:0, instance:UserAPIGetTest@3697186]">testWithNonExistingtUserId</td> 
-  <td>main@758529971</td>   <td></td> </tr>
-<tr bgcolor="d2ade3">  <td>23/11/22 21:58:31</td>   <td>6119</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserAPIGetTest.testWithSpecialChar()[pri:0, instance:UserAPIGetTest@3697186]">testWithSpecialChar</td> 
+<tr bgcolor="76d6af">  <td>23/11/25 18:22:09</td>   <td>3170</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserApachePOITests.testWithNonExistingtUserId(java.lang.String, java.lang.String)[pri:0, instance:UserApachePOITests@c7ba306]">testWithNonExistingtUserId</td> 
   <td>main@758529971</td>   <td></td> </tr>
 </table>
